Remove user setting from the common chat

--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -49,6 +49,7 @@
   display: flex;
   flex-direction: row;
   z-index: 50;
+  margin-left: -.1875rem;
 }
 
 /* #virtualclassCont.congrea #askQuestion .container .footer .controls div,
@@ -350,7 +351,6 @@
 } */
 
 #virtualclassCont.congrea #askQuestion .question .container .header .lable {
-  margin: 0 5px 0 5px;
   color: #616161;
   font-size: 0.6875rem;
   text-transform: none;
@@ -453,7 +453,7 @@
 #virtualclassCont.congrea #askQuestion .container .footer .controls .reply:hover,
 #virtualclassCont.congrea #askQuestion .container .footer .controls .navigation:hover,
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote:hover {
-  background-color: rgba(1, 112, 225, .1);
+  background-color: rgba(7, 75, 224, .1);
   border-radius: 5px;
 }
 
@@ -837,6 +837,7 @@
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .navigation {
   padding: 0.125rem 0.3125rem;
+  margin-right: 1px;
 }
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote.congtooltip:hover::after,
@@ -935,6 +936,7 @@
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote {
   padding: 0.125rem 0.3125rem;
+  margin-right: 1px;
 }
 
 #virtualclassCont.congrea #virtualclassAppRightPanel #askQuestionHeader .header .viewtext {
