--- a/css/modules/right-sidebar.css
+++ b/css/modules/right-sidebar.css
@@ -536,13 +536,13 @@ body {
   color: #fff;
 }
 
-#virtualclassCont.congrea .vidShow #stickycontainer #techVideo a.inner_bt {
+/* #virtualclassCont.congrea .vidShow #stickycontainer #techVideo a.inner_bt {
   background: linear-gradient(to bottom, #53a93f 0%, #53a93f 100%) !important;
 }
 
 #virtualclassCont.congrea.playMode .vidShow #stickycontainer #techVideo a.inner_bt {
   background: linear-gradient(to bottom, #22880b 0%, #22880b 100%) !important;
-}
+} */
 
 #virtualclassCont.congrea .vidShow #stickycontainer #techVideo.active a.inner_bt {
   background-color: unset;
@@ -1053,16 +1053,18 @@ body {
 
 #virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='userListHeader'] #userListHeader,
 #virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='userListHeader'] #appSettingCtrl,
-#virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='commonChatHeader'] #commonChatHeader,
-#virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='commonChatHeader'] #appSettingCtrl {
+#virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='commonChatHeader'] #commonChatHeader {
   display: inline-block;
 }
 
-#virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='userListHeader'] #appSettingCtrl,
-#virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='commonChatHeader'] #appSettingCtrl {
+#virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='userListHeader'] #appSettingCtrl {
   float: right;
   padding: 0.6875rem 0.9375rem;
   cursor: pointer;
+}
+
+#virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow='commonChatHeader'] #appSettingCtrl {
+  display: none;
 }
 
 #virtualclassCont.congrea .rightContainer.deactive,
