Improvements for ui

--- a/css/modules/icon.css
+++ b/css/modules/icon.css
@@ -933,7 +933,7 @@
   font-family: 'icomoon';
   font-size: 0.8125rem;
   cursor: pointer;
-  color: #5a5a5a;
+  color: #7b848c;
 }
 
 #virtualclassCont.congrea #askQuestion .container .answer .footer .controls .navigation span.button::before {
@@ -942,7 +942,7 @@
   font-family: 'icomoon';
   font-size: 0.8125rem;
   cursor: pointer;
-  color: #5a5a5a;
+  color: #7b848c;
 }
 
 #virtualclassCont.congrea #askQuestion .container .question .footer .moreControls::before {
