--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -933,6 +933,10 @@
     line-height: 1.3125rem;
     font-size: 1.25rem;
   }
+
+  #virtualclassCont.congrea #noteContainer .content {
+    background-image: -webkit-linear-gradient(left, #fff 0, #daca0900 0), -webkit-linear-gradient(right, #fff 0, #fff28f73 0), -webkit-linear-gradient(white 20px, #000 18px, #00000054 16px, #000000 36px);
+  }
 }
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote {
