Add precheck button next to network icon

--- a/css/modules/right-sidebar.css
+++ b/css/modules/right-sidebar.css
@@ -746,6 +746,7 @@ body {
 #virtualclassCont #appSettingDetail .app-settings-rbs {
   /* margin-top: 0.9375rem; */
   margin-bottom: 0.9375rem;
+  display: none;
 }
 
 #virtualclassCont #appSettingDetail .bulkUserActions {
@@ -1064,6 +1065,10 @@ body {
   float: right;
   padding: 0.6875rem 0.9375rem;
   cursor: pointer;
+}
+
+#virtualclassCont.congrea.student #virtualclassAppRightPanel #appSettingCtrl {
+  display: none;
 }
 
 #virtualclassCont.congrea .rightContainer.deactive,
