--- a/templates/footerBar.hbs
+++ b/templates/footerBar.hbs
@@ -54,6 +54,13 @@
             </span>
             </div>
         </div>
+        <span class="pre-check-btn congtooltip" data-title="{{getString 'appPrerequites'}}" id="precheckBtn">
+            <div id="settingPrecheck">
+            <div class="prechk" data-title="{{getString 'precheck'}}" id="precheckTest">
+                <span class="precheck cgIcon"  id="precheckSetting" >{{getString 'precheckStart'}}</span>
+            </div>
+            </div>
+        </span>
         {{> audioWidget}}
         <div id="fullScreenButton">
             <span class="congtooltip fullScreen" data-title="Full Screen"><i class="icon-fullScreen cgIcon"></i></span>
