--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -4806,7 +4806,7 @@ span#usertab_text {
   right: 6.5rem;
   bottom: -0.0625rem;
   z-index: 1000;
-  padding: 0.75rem 1.125rem;
+  padding: 0.71875rem 1.125rem 0.78125rem 1.125rem;
   cursor: pointer;
 }
 
