Change lable for pre-check

--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -1,6 +1,6 @@
 #virtualclassCont.congrea #askQuestion .container .question .content p {
-  font-size: .84375rem;
-  color: #3a3a3a;
+  font-size: 0.84375rem;
+  color: #4a4a4a;
   line-height: 1.2;
   margin-bottom: -1px;
   -webkit-font-smoothing: antialiased;
