--- a/templates/footerBar.hbs
+++ b/templates/footerBar.hbs
@@ -57,7 +57,7 @@
         <span class="pre-check-btn congtooltip" data-title="{{getString 'appPrerequites'}}" id="precheckBtn">
             <div id="settingPrecheck">
             <div class="prechk" data-title="{{getString 'precheck'}}" id="precheckTest">
-                <span class="precheck cgIcon"  id="precheckSetting" >{{getString 'precheckStart'}}</span>
+                <span class="precheck cgIcon"  id="precheckSetting" ></span>
             </div>
             </div>
         </span>
