--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -1404,10 +1404,14 @@ div.ui-memblist-usr .userVideos {
 }
 
 #virtualclassCont.congrea .vmchat_room_bt.congtooltip:hover::after,
-#virtualclassCont.congrea .vmchat_bar_button.congtooltip:hover::after,
-#virtualclassCont #virtualclassAppFooterPanel #precheckBtn.congtooltip:hover::after {
+#virtualclassCont.congrea .vmchat_bar_button.congtooltip:hover::after{
   bottom: 47px;
   right: -11px;
+}
+
+#virtualclassCont #virtualclassAppFooterPanel #precheckBtn.congtooltip:hover::after {
+  bottom: 47px;
+  left: -80px;
 }
 
 #virtualclassCont.congrea #appSettingCtrl.congtooltip:hover::after {
