Rec to be last element

--- a/css/modules/network.css
+++ b/css/modules/network.css
@@ -1,7 +1,7 @@
 #virtualclassCont.congrea #networkStatusContainer {
   position: absolute;
   top: 0;
-  left: 5.25rem;
+  left: 0;
   width: 3.125rem;
   float: right;
   border-right: 0.05em solid #021317 !important;
