--- a/css/modules/network.css
+++ b/css/modules/network.css
@@ -1,16 +1,11 @@
 #virtualclassCont.congrea #networkStatusContainer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 3.125rem;
-  float: right;
-  border-right: 0.05em solid #021317 !important;
+  order: 2;
 }
 
 #virtualclassCont.congrea #virtualclassAppFooterPanel #proposedSpeed {
   width: 1.375rem;
   height: 1.375rem;
-  padding: 0.5625rem 0.811115rem;
+  padding: 0.6875rem 0.811115rem;
 }
 
 #virtualclassCont.congrea #proposedSpeed[data-suggestion='high'] svg path.signalthree,
@@ -89,10 +84,8 @@
 }
 
 #virtualclassCont.congrea #networkStatusContainer #connectingRoomIcon {
-  margin-top: 6px;
-  margin-right: 8px;
-  margin-left: 9px;
   float: right;
+  margin: 0.5rem 0.5625rem;
 }
 
 #virtualclassCont.congrea #networkStatusContainer.connecting-room #connectingRoomIcon .icon-whiteboard #svg-spinner {
@@ -101,9 +94,7 @@
   animation-duration: 1.2s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
-  margin-left: 8px;
   display: block;
-  margin-top: 2px;
 }
 
 @keyframes rotate {
@@ -122,10 +113,6 @@
 
 #virtualclassCont.congrea.student #virtualclassAppRightPanel.vidHide #videoHostContainer {
   display: none !important;
-}
-
-#virtualclassCont.congrea #proposedSpeed #svgContainer {
-  margin-top: 1px;
 }
 
 #virtualclassCont.congrea #virtualclassApp.try-to-connect #virtualclassAppLeftPanel #virtualclassAppContainer #virtualclassEditorRich #virtualclassEditorRichBody .vceditor .CodeMirror {
