Add fabric.js library and tool rectangle

--- a/templates/whiteboard/toolbar.hbs
+++ b/templates/whiteboard/toolbar.hbs
@@ -4,10 +4,8 @@
     <a href="#" data-title="{{getString 'Freehand'}}" class="congtooltip"> <span class="icon-freeDrawing cgIcon"></span></a>
   </div>
 
-  <div id="tool_wrapper{{cn}}" class="shapesToolbox" data-currTool="shapes">
-    <div id="shapeIcon{{cn}}" class="shapes_icon">
-      <a href="#" data-title="{{getString 'Shapes'}}" class="congtooltip"><span class="icon-shapes cgIcon"></span></a>
-    </div>
+  <div id="tool_wrapper{{cn}}" class="shapesToolbox tool" data-tool="shapes" data-currTool="shapes">
+    <a href="#" data-title="{{getString 'Shapes'}}" class="congtooltip shapes_icon"><span class="icon-shapes cgIcon"></span></a>
 
     <div id="shapes{{cn}}" class="shapesTool">
       <div id="t_rectangle{{cn}}" class="tool" data-tool="rectangle">
