--- a/templates/whiteboard/main.hbs
+++ b/templates/whiteboard/main.hbs
@@ -3,12 +3,12 @@
     {{#if hasControl }}
       {{> whiteboardToolbar }}
     {{/if}}
-    
+
     <div id="canvasWrapper{{cn}}" class="canvasWrapper">
-      <canvas id="canvas{{cn}}" tabindex="0" >
+      <canvas id="canvas{{cn}}" tabindex="0" width="900", height="900">
         {{getString 'canvasmissing'}}
       </canvas>
     </div>
-    
+
   </div>
 </div>
