Add canvas by fabric.js on page refresh and multiple whiteboards

--- a/templates/whiteboard/main.hbs
+++ b/templates/whiteboard/main.hbs
@@ -5,7 +5,7 @@
     {{/if}}
 
     <div id="canvasWrapper{{cn}}" class="canvasWrapper">
-      <canvas id="canvas{{cn}}" tabindex="0" width="900", height="900">
+      <canvas id="canvas{{cn}}" tabindex="0" >
         {{getString 'canvasmissing'}}
       </canvas>
     </div>
