--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -1,3 +1,7 @@
+#virtualclassCont #askQuestion .container .content p {
+  white-space: pre-line;
+}
+
 #virtualclassCont.congrea #askQuestion .container .question .content p {
   font-size: 0.84375rem;
   color: #4a4a4a;
@@ -10,6 +14,22 @@
 /* #virtualclassCont.congrea #askQuestion .container .question .content p[data-component="question"] {
   color: #212121;
 } */
+
+#virtualclassCont.congrea #noteContainer .content {
+  width: 100%;
+  height: 100%;
+  resize: unset;
+  color: #1b1b1b;
+  font-size: 0.84375rem;
+  line-height: 1.5rem;
+  background-image: -webkit-linear-gradient(left, #fff 0, #daca0900 0), -webkit-linear-gradient(right, #fff 0, #fff28f73 0), -webkit-linear-gradient(white 23px, #000 18px, #00000054 16px, #000 36px);
+  background-repeat: repeat-y;
+  background-size: 100% 100%, 100% 100%, 100% 1.5rem;
+  overflow: auto;
+  border: 1px solid #d2d2d2;
+  letter-spacing: 1px;
+  padding-left: 8px;
+}
 
 #virtualclassCont.congrea #askQuestion .container .question .content {
   /* max-height: 50px;
@@ -31,6 +51,7 @@
   flex-direction: column;
   border-radius: 3px;
   padding: 5px 2px;
+
   /* box-shadow: 1px 2px 3px 0 #9a9a9a; */
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
@@ -49,7 +70,7 @@
   display: flex;
   flex-direction: row;
   z-index: 50;
-  margin-left: -.1875rem;
+  margin-left: -0.1875rem;
 }
 
 /* #virtualclassCont.congrea #askQuestion .container .footer .controls div,
@@ -88,38 +109,62 @@
   margin-left: 4px;
 }
 
-#virtualclassCont.congrea #askQuestion .container .question.mySelf .container[data-type="question"] .footer .controls .upVote span.total,
-#virtualclassCont.congrea #askQuestion .container .answer.mySelf .container .footer .controls .upVote span.total,
-#virtualclassCont.congrea #askQuestion .container [data-mark-answer="marked"] .container .footer .controls .upVote span.total {
-  color: #000;
-  opacity: 0.2;
+#virtualclassCont.congrea #noteNavigation .notenumber span.total {
+  margin-left: 5px;
 }
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote[data-upvote="upvoted"] span.total {
   color: #2695ff;
 }
 
+#virtualclassCont.congrea #askQuestion .container [data-mark-answer="marked"] .container .footer .controls .upVote span.total,
+#virtualclassCont.congrea #askQuestion .container .answer.mySelf .container .footer .controls .upVote span.total,
+#virtualclassCont.congrea #askQuestion .container .question.mySelf .container[data-type="question"] .footer .controls .upVote span.total {
+  color: #000;
+  opacity: 0.2;
+}
+
 #virtualclassCont.congrea #askQuestion .container .footer .moreControls {
   cursor: pointer;
 }
 
-#virtualclassCont.congrea.student #askQuestion .container .footer .moreControls,
-#virtualclassCont.congrea.student #askQuestion .container .question.mySelf.noneditable .container[data-type="question"] .footer .moreControls,
-#virtualclassCont.congrea.student #askQuestion .container .answer.mySelf.noneditable .footer .moreControls,
-#virtualclassCont.congrea.student #askQuestion .container .comment.mySelf.noneditable .container .footer .moreControls {
+#virtualclassCont.congrea.student #askQuestion .container .footer .moreControls {
   display: none;
 }
 
-#virtualclassCont.congrea.student.orginalTeacher #askQuestion .container .footer .moreControls,
-#virtualclassCont.congrea.student.orginalTeacher #askQuestion .container .question.mySelf.noneditable .container[data-type="question"] .footer .moreControls,
-#virtualclassCont.congrea.student #askQuestion.orginalTeacher .container .answer.mySelf.noneditable .footer .moreControls,
-#virtualclassCont.congrea.student #askQuestion.orginalTeacher .container .comment.mySelf.noneditable .container .footer .moreControls {
+#virtualclassCont.congrea.student.orginalTeacher #askQuestion .container .footer .moreControls {
   display: block;
 }
 
-#virtualclassCont.congrea.student #askQuestion .container .question.mySelf.editable .container[data-type="question"] .footer .moreControls,
+#virtualclassCont.congrea.student #askQuestion .container .answer.mySelf.noneditable .footer .moreControls {
+  display: none;
+}
+
 #virtualclassCont.congrea.student #askQuestion .container .answer.mySelf.editable .footer .moreControls,
-#virtualclassCont.congrea.student #askQuestion .container .comment.mySelf.editable .footer .moreControls,
+#virtualclassCont.congrea.student #askQuestion .container .comment.mySelf.editable .footer .moreControls {
+  display: block;
+  align-self: flex-end;
+}
+
+#virtualclassCont.congrea.student #askQuestion.orginalTeacher .container .answer.mySelf.noneditable .footer .moreControls {
+  display: block;
+}
+
+#virtualclassCont.congrea.student #askQuestion .container .comment.mySelf.noneditable .container .footer .moreControls,
+#virtualclassCont.congrea.student #askQuestion .container .question.mySelf.noneditable .container[data-type="question"] .footer .moreControls {
+  display: none;
+}
+
+#virtualclassCont.congrea.student #askQuestion .container .question.mySelf.editable .container[data-type="question"] .footer .moreControls {
+  display: block;
+  align-self: flex-end;
+}
+
+#virtualclassCont.congrea.student #askQuestion.orginalTeacher .container .comment.mySelf.noneditable .container .footer .moreControls,
+#virtualclassCont.congrea.student.orginalTeacher #askQuestion .container .question.mySelf.noneditable .container[data-type="question"] .footer .moreControls {
+  display: block;
+}
+
 #virtualclassCont.congrea.student #askQuestion .container .comment.mySelf.noneditable .comment.mySelf.editable .footer .moreControls {
   display: block;
   align-self: flex-end;
@@ -138,6 +183,10 @@
   bottom: 1.5625rem;
   right: 2px;
   z-index: 100;
+}
+
+#virtualclassCont.congrea #noteNavigation .notenumber span {
+  display: inline-block;
 }
 
 #virtualclassCont.congrea #askQuestion .container .footer .moreControls .item span {
@@ -183,6 +232,14 @@
   scrollbar-width: none;
 }
 
+#virtualclassCont.congrea #askQuestion #writeContent .text::-webkit-scrollbar {
+  width: 0;
+}
+
+#virtualclassCont.congrea #askQuestion #writeContent .text:hover::-webkit-scrollbar {
+  width: 2px;
+}
+
 #virtualclassCont.congrea #askQuestion .container .question #writeContent .text {
   border-radius: 4px;
   width: 100%;
@@ -195,16 +252,8 @@
   max-height: 90px;
 }
 
-#virtualclassCont.congrea #askQuestion #writeContent .text::-webkit-scrollbar {
-  width: 0;
-}
-
 #virtualclassCont.congrea #askQuestion .container .question #writeContent .text::-webkit-scrollbar {
   width: 4px;
-}
-
-#virtualclassCont.congrea #askQuestion #writeContent .text:hover::-webkit-scrollbar {
-  width: 2px;
 }
 
 #virtualclassCont.congrea #askQuestion #writeContent {
@@ -214,6 +263,10 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: #fff;
+}
+
+#virtualclassCont #askQuestion.tempDown #writeContent {
+  pointer-events: visible;
 }
 
 #virtualclassCont.congrea #askQuestion .container .question #writeContent {
@@ -232,7 +285,6 @@
   display: block;
 }
 
-
 /* #virtualclassCont.congrea.askQuestionFetching #congAskQuestion, */
 
 #virtualclassCont.congrea.connecting #congAskQuestion.askQuestionEnable,
@@ -243,14 +295,51 @@
   pointer-events: none;
 }
 
+#virtualclassCont.congrea #askQuestion .container .footer .controls .reply {
+  line-height: 1rem;
+  padding: 0.125rem 0.3125rem;
+}
+
+#virtualclassCont.congrea #askQuestion .container .footer .controls .reply:hover {
+  background-color: rgba(7, 75, 224, 0.1);
+  border-radius: 5px;
+}
+
 #virtualclassCont.congrea #askQuestion .upVote[data-upvote="upvoted"],
 #virtualclassCont.congrea #askQuestion .container .question[data-mark-answer="marked"] .upVote,
 #virtualclassCont.congrea #askQuestion .container .question[data-mark-answer="marked"] .container[data-type="question"] .reply {
   pointer-events: none !important;
 }
 
+#virtualclassCont.congrea #askQuestion .container .footer .controls .upVote,
+#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation {
+  cursor: pointer;
+  line-height: 1rem;
+}
+
+#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation {
+  padding: 0.125rem 0.3125rem;
+  margin-right: 1px;
+}
+
+#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation:hover,
+#virtualclassCont.congrea #askQuestion .container .footer .controls .upVote:hover {
+  background-color: rgba(7, 75, 224, 0.1);
+  border-radius: 5px;
+}
+
+#virtualclassCont.congrea #askQuestion[data-upvote="disable"] .container .footer .controls .upVote,
+#virtualclassCont.congrea.student #askQuestion[data-upvote="disable"] .container .footer .controls .upVote {
+  pointer-events: none;
+}
+
+#virtualclassCont.congrea.student #askQuestion[data-upvote="enable"] .container .footer .controls .upVote {
+  cursor: pointer;
+  line-height: 1rem;
+}
+
 #virtualclassCont.congrea #askQuestion .container .question[data-mark-answer="marked"] .container[data-type="question"] .reply {
-  opacity: .2;
+  opacity: 0.2;
 }
 
 /* #virtualclassCont.congrea #askQuestion .upVote[data-upvote="upvoted"] span.button::before,
@@ -358,7 +447,7 @@
   text-transform: none;
   margin-right: 0;
   font-weight: 400;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
 }
 
 #virtualclassCont.congrea #askQuestion .answer .container .header .lable,
@@ -369,7 +458,12 @@
 #virtualclassCont.congrea #askQuestion .container .question .answers,
 #virtualclassCont.congrea #askQuestion .container .question .comments {
   margin-left: 4px;
+
   /* margin-top: 2px; */
+}
+
+#virtualclassCont.congrea #noteContainer .loading {
+  display: none;
 }
 
 #virtualclassCont.congrea #askQuestion .container .question .footer .moreControls .item.close {
@@ -432,6 +526,11 @@
   padding: 0 0;
 }
 
+#virtualclassCont.congrea #askQuestion .container .footer .controls .reply .button {
+  display: inline-block;
+  padding: 0;
+}
+
 #virtualclassCont.congrea #askQuestion .container .question .footer .controls .navigation .button,
 #virtualclassCont.congrea #askQuestion .container .answer .footer .controls .navigation .button {
   display: inline-block;
@@ -447,29 +546,21 @@
   margin-top: 3px;
 }button, */
 
-#virtualclassCont.congrea #askQuestion .container .footer .controls .reply .button {
-  display: inline-block;
-  padding: 0;
-}
-
-#virtualclassCont.congrea #askQuestion .container .footer .controls .reply:hover,
-#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation:hover,
-#virtualclassCont.congrea #askQuestion .container .footer .controls .upVote:hover {
-  background-color: rgba(7, 75, 224, .1);
-  border-radius: 5px;
+#virtualclassCont.congrea #askQuestion .container .comment .footer .controls .navigation {
+  margin-left: 0;
 }
 
 #virtualclassCont.congrea #askQuestion .answer .container .footer .controls .reply:hover,
 #virtualclassCont.congrea #askQuestion .answer .container .footer .controls .navigation:hover,
-#virtualclassCont.congrea #askQuestion .answer .container .footer .controls .upVote:hover  {
-  background-color: rgba(25, 157, 27, .1);
+#virtualclassCont.congrea #askQuestion .answer .container .footer .controls .upVote:hover {
+  background-color: rgba(25, 157, 27, 0.1);
   border-radius: 5px;
 }
 
 #virtualclassCont.congrea #askQuestion .comment .container .footer .controls .reply:hover,
 #virtualclassCont.congrea #askQuestion .comment .container .footer .controls .navigation:hover,
 #virtualclassCont.congrea #askQuestion .comment .container .footer .controls .upVote:hover {
-  background-color: rgba(255, 81, 0, .1);
+  background-color: rgba(255, 81, 0, 0.1);
   border-radius: 5px;
 }
 
@@ -568,29 +659,9 @@
   display: inline-block;
 } */
 
-#virtualclassCont.congrea #noteContainer .loading {
-  display: none;
-}
-
 /* #virtualclassCont.congrea #noteContainer {
   display: none;
 } */
-
-#virtualclassCont.congrea #noteContainer .content {
-  width: 100%;
-  height: 100%;
-  resize: unset;
-  color: #1b1b1b;
-  font-size: 0.84375rem;
-  line-height: 1.5rem;
-  background-image: -webkit-linear-gradient(left, #fff 0, #daca0900 0), -webkit-linear-gradient(right, #fff 0, #fff28f73 0), -webkit-linear-gradient(white 23px, #000 18px, #00000054 16px, #000000 36px);
-  background-repeat: repeat-y;
-  background-size: 100% 100%, 100% 100%, 100% 1.5rem;
-  overflow: auto;
-  border: 1px solid #d2d2d2;
-  letter-spacing: 1px;
-  padding-left: 8px;
-}
 
 #virtualclassCont.congrea #noteContainer .context.active {
   height: 100%;
@@ -616,13 +687,13 @@
   text-transform: capitalize;
 }
 
-#virtualclassCont.congrea #askQuestion .content p .btn.open:active {
-  box-shadow: none;
-}
-
 #virtualclassCont.congrea #askQuestion .content p .btn.open,
 #virtualclassCont.congrea #askQuestion .content .morecontent.open {
   display: inline;
+}
+
+#virtualclassCont.congrea #askQuestion .content p .btn.open:active {
+  box-shadow: none;
 }
 
 #virtualclassCont.congrea #askQuestion .content p .btn.close,
@@ -669,14 +740,6 @@
 #virtualclassCont.congrea #noteNavigationContainer .next.deactive {
   pointer-events: none;
   opacity: 0.5;
-}
-
-#virtualclassCont.congrea #noteNavigation .notenumber span {
-  display: inline-block;
-}
-
-#virtualclassCont.congrea #noteNavigation .notenumber span.total {
-  margin-left: 5px;
 }
 
 #virtualclassCont.congrea #noteNavigationContainer .clearAll .event {
@@ -821,26 +884,8 @@
   opacity: 0.5;
 }
 
-#virtualclassCont.congrea #askQuestion .container .footer .controls .upVote,
-#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation,
-#virtualclassCont.congrea.student #askQuestion[data-upvote="enable"] .container .footer .controls .upVote {
-  cursor: pointer;
-  line-height: 1rem;
-}
-
-#virtualclassCont.congrea.student #askQuestion[data-upvote="disable"] .container .footer .controls .upVote,
-#virtualclassCont.congrea #askQuestion[data-upvote="disable"] .container .footer .controls .upVote {
-  pointer-events: none;
-}
-
-#virtualclassCont.congrea #askQuestion .container .footer .controls .reply {
-  line-height: 1rem;
-  padding: 0.125rem 0.3125rem;
-}
-
-#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation {
-  padding: 0.125rem 0.3125rem;
-  margin-right: 1px;
+#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation.congtooltip:hover::after {
+  right: -16px;
 }
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote.congtooltip:hover::after,
@@ -851,16 +896,8 @@
   font-size: 0.6875rem;
 }
 
-#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation.congtooltip:hover::after {
-  right: -16px;
-}
-
 #virtualclassCont.congrea #askQuestion .container .comment .footer .controls .navigation.congtooltip:hover::after {
   right: -42px;
-}
-
-#virtualclassCont.congrea #askQuestion .container .comment .footer .controls .navigation {
-  margin-left: 0;
 }
 
 /* #virtualclassCont.congrea #askQuestion .container .footer .controls .navigation.disable {
@@ -906,25 +943,17 @@
   100% { right: 0; bottom: 4.5rem; }
 }
 
-#virtualclassCont #askQuestion .container .content p {
-  white-space: pre-line;
-}
-
 #virtualclassCont #askQuestion.tempDown {
   pointer-events: none;
 }
 
-#virtualclassCont #askQuestion.tempDown #writeContent {
-  pointer-events: visible;
-}
-
-#virtualclassCont.congrea.student #askQuestion[data-answer="disable"] .container .question .container[data-type="question"] .reply {
+#virtualclassCont.congrea.student #askQuestion[data-comment="disable"] .answers .answer .container .reply,
+#virtualclassCont.congrea.student #askQuestion[data-comment="disable"] .comments .comment .container .reply {
   pointer-events: none;
   opacity: 0.2;
 }
 
-#virtualclassCont.congrea.student #askQuestion[data-comment="disable"] .answers .answer .container .reply,
-#virtualclassCont.congrea.student #askQuestion[data-comment="disable"] .comments .comment .container .reply {
+#virtualclassCont.congrea.student #askQuestion[data-answer="disable"] .container .question .container[data-type="question"] .reply {
   pointer-events: none;
   opacity: 0.2;
 }
