--- a/css/modules/dbVideo.css
+++ b/css/modules/dbVideo.css
@@ -104,6 +104,12 @@
   position: relative;
 }
 
+@-moz-document url-prefix() {
+  #virtualclassCont.congrea #congdashboard.modal .modal-header {
+    height: 2.75rem;
+  }
+}
+
 /* old */
 
 #virtualclassCont.congrea #listvideo .linkvideo .controlCont div[data-status="0"]::before {
